[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rdfind"
authors = [{name = "KOLANICH"}]
description = "Just a wrapper to https://github.com/pauldreik/rdfind"
readme = "ReadMe.md"
keywords = ["rdfind", "deduplication"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/prebuilder/rdfind.py"}
requires-python = ">=3.4"
dependencies = [
	"sh"  # @ git+https://github.com/amoffat/sh.git
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
py-modules = ["rdfind"]
include-package-data = false

[tool.setuptools_scm]
