[metadata]
name = rdfind
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/rdfind.py
description = Just a wrapper to https://github.com/pauldreik/rdfind 
long_description = file: ReadMe.md
keywords = rdfind, deduplication
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
py_modules = rdfind
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
install_requires =
	sh @ git+https://github.com/amoffat/sh.git
